bugfix(ui): Fix list alignment issue in smaller screens

--- a/Plutus.Mvc/wwwroot/css/list.css
+++ b/Plutus.Mvc/wwwroot/css/list.css
@@ -78,9 +78,14 @@ input[name="query"] {
     background-color: var(--pink-0);
 }
 
+.list_item_category_income {
+    color: var(--green-9);
+    background-color: var(--green-0);
+}
+
 .list_item_amount {
     align-self: center;
-    font-size: var(--font-size-2);
+    font-size: var(--font-size-1);
 }
 
 .list_item_actions {
